--- a/PondHopper/PondHopper/Resources/Info.plist
+++ b/PondHopper/PondHopper/Resources/Info.plist
@@ -23,7 +23,7 @@
 		<string>Icon-ipad.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.shawnsbits.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
